--- a/aula01/index.html
+++ b/aula01/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- CSS only -->
-        <title>Iniciando com Bootrap</title>
+        <title>Iniciando com Bootstrap</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -14,7 +14,7 @@
         <header id="menu">
             <nav class="navbar navbar-expand-lg navbar-light card">
                 <div class="container-fluid container">
-                    <a class="navbar-brand" href="#"><h1>Bootrap</h1></a>
+                    <a class="navbar-brand" href="#"><h1>Bootstrap</h1></a>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
@@ -44,12 +44,12 @@
                 <form class="p-4">
                     <div class="mb-3">
                         <label for="email" class="form-label">Seu email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="email">
                         <div id="emailHelp" class="form-text text-muted"><small>Adicione aqui seu email</small></div>
                     </div>
                     <div class="mb-3">
                         <label for="senha" class="form-label">Senha</label>
-                        <input type="password" class="form-control" id="senha">
+                        <input type="password" class="form-control" id="senha" placeholder="senha">
                     </div>
                     <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="manterConectado">
