--- a/aula01/index.html
+++ b/aula01/index.html
@@ -13,7 +13,7 @@
     <body>
         <header id="menu">
             <nav class="navbar navbar-expand-lg navbar-light card">
-                <div class="container-fluid container">
+                <div class="container">
                     <a class="navbar-brand" href="#"><h1>Bootrap</h1></a>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
@@ -31,32 +31,34 @@
             </div>
         </nav>
         </header>
-        <div id="content" class="row justify-content-center p-5 container">
-            <div id="content-img" class="col-md-6 content-img my-3 p-5 text-center">
-                <h2>Formulário de login</h2>
-                <p>Seja bem vindo ao Bootstrap</p>
-                <picture>
-                    <img class="img-fluid" src="https://boring-feynman-12ba8b.netlify.app/img/bootstrap-icons.png" width="550">
-                </picture>
-            </div>
-            <div id="content-login" class=" col-md-6 p-5 card">
-                <h2 class="pb-5 ">Informe aqui seu usuário e senha</h2>
-                <form class="p-4">
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Seu email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text text-muted"><small>Adicione aqui seu email</small></div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="senha" class="form-label">Senha</label>
-                        <input type="password" class="form-control" id="senha">
-                    </div>
-                    <div class="mb-3 form-check">
-                        <input type="checkbox" class="form-check-input" id="manterConectado">
-                        <label class="form-check-label" for="manterConectado">Me mantenha conectado</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Clique aqui para logar</button>
-                </form>
+        <div class="container">
+                <div id="content" class="row justify-content-center p-5 ">
+                    <div id="content-img" class="col-md-6 content-img my-3 p-5 text-center">
+                    <h2>Formulário de login</h2>
+                    <p>Seja bem vindo ao Bootstrap</p>
+                    <picture>
+                        <img class="img-fluid" src="https://boring-feynman-12ba8b.netlify.app/img/bootstrap-icons.png" width="550">
+                    </picture>
+                </div>
+                <div id="content-login" class=" col-md-6 p-5 card">
+                    <h2 class="pb-5 ">Informe aqui seu usuário e senha</h2>
+                    <form class="p-4">
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Seu email</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text text-muted"><small>Adicione aqui seu email</small></div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="senha" class="form-label">Senha</label>
+                            <input type="password" class="form-control" id="senha">
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="manterConectado">
+                            <label class="form-check-label" for="manterConectado">Me mantenha conectado</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Clique aqui para logar</button>
+                    </form>
+                </div>
             </div>
         </div>
         <footer id="footer" class=" footer text-center text-muted mt-auto">
