feat(auala03):desafio 3 meadia query

--- a/aula03/index.html
+++ b/aula03/index.html
@@ -24,7 +24,7 @@
 
         </div>
     </div>
-    <div class="container-paralax bg-img--versions--1 item-center--right">
+    <div class="container-paralax bg-img--versions--1 item-center right">
         <div class="content-paralex--data">
             <h1>Container with paralex 1</h1>
             <p>
@@ -33,7 +33,7 @@
         </div>
     </div>
     <br>
-    <div class="container-paralax bg-img--versions--1 item-center--left">
+    <div class="container-paralax bg-img--versions--1 item-center left">
         <div class=" content-paralex--data">
             <h1>Container with paralex 1</h1>
             <p>
