style(aula05):estilizaçao

--- a/chucknorris/index.html
+++ b/chucknorris/index.html
@@ -13,13 +13,12 @@
     <nav id="categories"></nav>
 
     <form id="search-form" class="search-box">
-        <label for="theme"></label>
         <input id="theme-input" name="theme" type="text" placeholder="Theme">
         <button type="submit">search</button>
     </form>
 
-    <div id="root" class="flex">
-        <div id="loader"></div>
+    <div id="root" class="joke-flex">
+            <div id="loader"></div> 
     </div>
 </body>
 <script src="assets/js/app.js"></script>
